Improve the view activity_main.xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="reset_string">Resetuj</string>
     <string name="string_time">%02d:%02d:%02d:%02d</string>
     <string name="default_settings_text_stopwatch">00:00:00:00</string>
+    <string name="save_records">Save records</string>
 </resources>
